Fix support for socks proxies