@@ -19,6 +19,8 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.Authenticator;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.net.PasswordAuthentication;
@@ -361,7 +363,7 @@ public class Dependencies {
         String proxyConfig = ConfigFile.get("settings", "proxy", false);
         if (proxyConfig != null && !proxyConfig.trim().equals("")) {
             try {
-                URL proxyUrl = new URL(proxyConfig);
+                URI proxyUrl = new URI(proxyConfig);
                 String userInfo = proxyUrl.getUserInfo();
                 if (userInfo != null) {
                     final String user = userInfo.split(":")[0];
@@ -379,7 +381,7 @@ public class Dependencies {
                     System.setProperty("https.proxyPort", Integer.toString(proxyUrl.getPort()));
                 }
 
-            } catch (MalformedURLException e) {
+            } catch (URISyntaxException e) {
                 WakaTime.error("Proxy string must follow https://user:pass@host:port format: " + proxyConfig);
             }
         }
